pom changes